[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Malo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/FondoProyecto.jpg" type="Texture" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -5, -3, 0, 0, 0, 0, -2, -3, 0, 0, 0, 0, 640, -3, 0, 0, 0, 0, 642.671, 471, 0, 0, 0, 0, 639, 957, 0, 0, 0, 0, -2, 951, 0, 0, 0, 0, -5, -3 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -805.277 ]
}
Malo = ExtResource( 3 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 477.0
margin_bottom = 645.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MaloTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="InicioPosicion" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Camino" type="Path2D" parent="."]
position = Vector2( -1.25581, -0.978125 )
scale = Vector2( 0.748837, 0.673958 )
curve = SubResource( 1 )

[node name="PosMalo" type="PathFollow2D" parent="Camino"]
position = Vector2( -5, -3 )

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="AudioMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MaloTimer" to="." method="_on_MaloTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
